# CAOSDBA

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  queries.yaml  query_definitions.txt
.github/workflows/: validate-framework.yml
bindings/: CMakeLists.txt
bindings/node/: CMakeLists.txt  bindings.cpp
bindings/php/: CMakeLists.txt  bindings.cpp
bindings/php/scripts/: create_distribution_tarball.sh
bindings/python/: CMakeLists.txt  bindings.cpp
cmake/: app.cmake  compiler.cmake  config.cmake  db_backend.cmake  libcaos.cmake  policy.cmake
examples/: CMakeLists.txt
examples/crow_endpoint/: CMakeLists.txt  main.cpp
examples/crow_middleware/: CMakeLists.txt  main.cpp
examples/stress/: CMakeLists.txt  main.cpp
extensions/: CMakeLists.txt
extensions/node/: CMakeLists.txt  bindings.cpp
extensions/php/: CMakeLists.txt  bindings.cpp
extensions/php/cmake/: package_deb.cmake
extensions/php/scripts/: create_distribution_tarball.sh  create_package_deb.sh
extensions/python/: CMakeLists.txt  bindings.cpp
libcaos/: CMakeLists.txt  CrowCpp.cpp  build_info.h.in  common.hpp  config.h.in  config_validation.hpp  environment.cpp  generate_queries.py  libcaos.cpp  logo.hpp  query_definitions.txt  terminal_options.cpp  version.h.in
libcaos/Middleware/: Repository.hpp
libcaos/Middleware/Repository/: Exception.hpp  IQuery.hpp  IRepository.hpp
libcaos/Middleware/Repository/Cache/: Cache.cpp  Cache.hpp  Query.hpp
libcaos/Middleware/Repository/Cache/Redis/: Query.hpp  Redis.cpp  Redis.hpp
libcaos/Middleware/Repository/Database/: Database.cpp  Database.hpp  Query.hpp
libcaos/Middleware/Repository/Database/MariaDB/: MariaDB.cpp  MariaDB.hpp  Query.hpp
libcaos/Middleware/Repository/Database/MySQL/: MySQL.cpp  MySQL.hpp  Query.hpp
libcaos/Middleware/Repository/Database/PostgreSQL/: PostgreSQL.cpp  PostgreSQL.hpp  Query.hpp
libcaos/cmake/: CPM.cmake  build_counter_and_version.cmake  compiler.cmake  coverage.cmake  crowcpp.cmake  cxxopts.cmake  debug.cmake  fmt.cmake  increment_build_counter.cmake  mariadb.cmake  mysql.cmake  postgresql.cmake  project_version.cmake  query_code_generation.cmake  redis.cmake  spdlog.cmake
libcaos/include/: CrowCpp.hpp  Filter.hpp  environment.hpp  libcaos.hpp  terminal_options.hpp
libcaos/include/Filter/: Auth.hpp
libcaos/include/Filter/Auth/: Token.hpp
libcaos/test/: CMakeLists.txt  test_main.cpp
libcaos/test/tests/: log.hpp  terminal_options.hpp
queries/CAOSDBA/: queries.yaml
schemas/: query-schema.json
schemas/CAOSDBA/: queries.json
template/bindings/node/cmake/: app.cmake
template/bindings/node/scripts/: create_package_deb.sh
template/bindings/node/src/: TEST.md
template/bindings/node/src/include/: extension_config.h.in
template/bindings/nodejs/cmake/: app.cmake  type_code.cmake
template/bindings/nodejs/queries/custom/: queries.yaml
template/bindings/nodejs/scripts/: create_distribution_tarball.sh  create_package_deb.sh
template/bindings/nodejs/src/: TEST.md  bindings.cpp  call_context.cpp  test.js
template/bindings/nodejs/src/include/: call_context.hpp  caosdba.hpp  error.hpp  extension_config.h.in  extension_config.h.inp
template/bindings/nodejs/src/include/Cache/Redis/: Query.hpp
template/bindings/nodejs/src/include/Database/MariaDB/: Query.hpp
template/bindings/nodejs/src/include/Database/MySQL/: Query.hpp
template/bindings/nodejs/src/include/Database/PostgreSQL/: Query.hpp
template/bindings/nodejs/typescript/: README.md  index.js  package.json  tsconfig.json
template/bindings/nodejs/typescript/test/: test.ts  tsconfig.json
template/bindings/nodejs/typescript/types/: __PROJECT_NAME__.d.ts  test-types.ts
template/bindings/php/cmake/: app.cmake  type_code.cmake
template/bindings/php/scripts/: create_distribution_tarball.sh  create_package_deb.sh
template/bindings/php/src/: bindings.cpp  call_context.cpp
template/bindings/php/src/include/: call_context.hpp  caosdba.hpp  error.hpp  extension_config.h.in
template/bindings/php/src/include/Cache/Redis/: Query.hpp
template/bindings/php/src/include/Database/MariaDB/: Query.hpp
template/bindings/php/src/include/Database/MySQL/: Query.hpp
template/bindings/php/src/include/Database/PostgreSQL/: Query.hpp
template/bindings/python/cmake/: app.cmake
template/bindings/python/queries/custom/: queries.yaml.example
template/bindings/python/schemas/custom/: queries.json.example
template/bindings/python/scripts/: create_distribution_tarball.sh  create_package_deb.sh
template/bindings/python/src/: bindings.cpp  call_context.cpp  test.py
template/bindings/python/src/include/: call_context.hpp  caosdba.hpp  error.hpp  extension_config.h.in
template/bindings/python/src/include/Cache/Redis/: Query.hpp
template/bindings/python/src/include/Database/MariaDB/: Query.hpp
template/bindings/python/src/include/Database/MySQL/: Query.hpp
template/bindings/python/src/include/Database/PostgreSQL/: Query.hpp
template/crowcpp/endpoint/cmake/: app.cmake  app_debug.cmake  type_code.cmake
template/crowcpp/endpoint/src/: main.cpp
template/crowcpp/middleware/src/: main.cpp
template/standalone/cmake/: app.cmake  custom_code.cmake  type_code.cmake
template/standalone/src/: main.cpp
template/standalone/src/include/Cache/Redis/: Query.hpp
template/standalone/src/include/Database/MariaDB/: Query.hpp
template/standalone/src/include/Database/MySQL/: Query.hpp
template/standalone/src/include/Database/PostgreSQL/: Query.hpp
test/: test_main.cpp
