cmake_minimum_required(VERSION 3.5)

# PHP EXTENSION ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
if(CAOS_BUILD_PHP_EXTENSION)
  add_subdirectory(php)
endif()
# PHP_EXTENSION ------------------------------------------------------------------------------------
